------
v2.4.2
------




------
v2.4.1
------

[mjr] Use existing sftp resource when creating url wrapper (PR #1).


------
v2.4.0
------

[mjr] Allow Horde_Vfs::writeData() to accept stream input.
[jan] Fix retrieving files from root folder with SQL backends (Bug #14545).


------
v2.3.4
------

[jan] Use more efficient database access in SQL backend.


------
v2.3.3
------

[jan] Fix creating the vfsroot when using paths in the 'hostspec' parameter of
      the Smb driver.
[jan] Don't change directory when listing folders in File backend.
[jan] Allow to specify root folder ('/') as 'vfsroot' parameter.


------
v2.3.2
------

[jan] Update Greek translation (Limperis Antonis <limperis@cti.gr>).


------
v2.3.1
------

[jan] Mark PHP 7 as supported.


------
v2.3.0
------

[jan] Make 'port' parameter of Smb driver optional.
[jan] Add 'domain' parameter to Smb driver.
[jan] Allow to specify a fixed leading directory in Smb driver.


------
v2.2.2
------

[jan] Fix updating quota when overwriting existing files.
[jan] Fix updating quota when using writeData() with FTP driver.
[jan] Fix setting permissions in Ssh2 driver (Bug #13783).


------
v2.2.1
------

[jan] Support loading translations from Composer-installed package.
[jan] Improve PSR-2 compatibility.


------
v2.2.0
------

[jan] Remove broken Kolab driver.
[mms] Add null VFS driver.
[jan] Support Oracle with SQL driver.


------
v2.1.2
------

[jan] Bump minimum version of SSH2 extension to 0.12.


------
v2.1.1
------

[jan] Return more detailed error messages from File driver.


------
v2.1.0
------

[mms] Add MongoDB storage driver.
[jan] Use ssh2_sftp_chmod() if available (ssh2 0.12).


------
v2.0.4
------

[jan] Update Basque translation (Ibon Igartua <ibon.igartua@ehu.es>).
[jan] Don't rely on PEAR to determine Windows OS in Samba backend.
[jan] Implement vfsroot parameter in Samba backend.


------
v2.0.3
------

[jan] Fix deleting folders from absolute path in FTP backend (Bug #11761).


------